kubernetes/deployment.yml
apiVersion: v1
kind: Service
metadata:
    name: proekt_kiii-db-svc
spec:
    selector:
        app: postgres
    type: NodePort
    ports:
        - protocol: TCP
          port: 5432
          nodePort: 30002
          targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
    name: proekt_kiii-app-svc
spec:
    selector:
        app: webapp
    type: NodePort
    ports:
        - protocol: TCP
          port: 8080
          nodePort: 30001
          targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: proekt_kiii-db-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: postgres
    template:
        metadata:
            labels:
                app: postgres
        spec:
            containers:
                - name: postgres-container
                  image: postgres
                  ports:
                      - containerPort: 5432
                  volumeMounts:
                      - name: postgres-volume
                        mountPath: /var/lib/postgresql/data
            volumes:
                - name: postgres-volume
                  persistentVolumeClaim:
                      claimName: proekt_kiii-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: proekt_kiii-app-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            app: webapp
    template:
        metadata:
            labels:
                app: webapp
        spec:
            containers:
                - name: webapp-container
                  image: optimusdame/proekt_kiii-app:1.0
                  ports:
                      - containerPort: 8080
