kubernetes/ingress-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: proekt_kiii-db-svc
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: proekt_kiii-appv1-svc
spec:
  selector:
    app: webappv1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: proekt_kiii-appv2-svc
spec:
  selector:
    app: webappv2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proekt_kiii-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres-container
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-volume
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: proekt_kiii-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proekt_kiii-appv1-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webappv1
  template:
    metadata:
      labels:
        app: webappv1
    spec:
      containers:
        - name: webappv1-container
          image: optimusdame/proekt_kiii-app:1.0
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proekt_kiii-appv2-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webappv2
  template:
    metadata:
      labels:
        app: webappv2
    spec:
      containers:
        - name: webappv2-container
          image: optimusdame/proekt_kiii-app:2.0
          ports:
            - containerPort: 8080
