kubernetes/ingress-namespaced.yml
apiVersion: v1
kind: Namespace
metadata:
  name: proekt-kiii

---

apiVersion: v1
kind: Service
metadata:
  name: proekt-kiii-db-svc
  namespace: proekt-kiii
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---

apiVersion: v1
kind: Service
metadata:
  name: proekt-kiii-appv1-svc
  namespace: proekt-kiii
spec:
  selector:
    app: webappv1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: proekt-kiii-appv2-svc
  namespace: proekt-kiii
spec:
  selector:
    app: webappv2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: proekt-kiii-db-deployment
  namespace: proekt-kiii
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres-container
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-volume
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: proekt-kiii-pvc

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: proekt-kiii-appv1-deployment
  namespace: proekt-kiii
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webappv1
  template:
    metadata:
      labels:
        app: webappv1
    spec:
      containers:
        - name: webappv1-container
          image: optimusdame/proekt-kiii-app:1.0
          ports:
            - containerPort: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: proekt-kiii-appv2-deployment
  namespace: proekt-kiii
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webappv2
  template:
    metadata:
      labels:
        app: webappv2
    spec:
      containers:
        - name: webappv2-container
          image: optimusdame/proekt-kiii-app:2.0
          ports:
            - containerPort: 8080
