kubernetes/statefulset-deployment-namespaced.yml
apiVersion: v1
kind: Namespace
metadata:
  name: proekt_kiii

---

apiVersion: v1
kind: Service
metadata:
  name: proekt_kiii-db-svc
  namespace: proekt_kiii
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---

apiVersion: v1
kind: Service
metadata:
  name: proekt_kiii-appv1-svc
  namespace: proekt_kiii
spec:
  clusterIP: None
  selector:
    app: webappv1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: proekt_kiii-appv2-svc
  namespace: proekt_kiii
spec:
  clusterIP: None
  selector:
    app: webappv2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: proekt_kiii-db-statefulset
  namespace: proekt_kiii
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: proekt_kiii-db-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres-container
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-volume
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: proekt_kiii-pvc

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: proekt_kiii-appv1-statefulset
  namespace: proekt_kiii
spec:
  selector:
    matchLabels:
      app: webappv1
  serviceName: proekt_kiii-appv1-svc
  replicas: 3
  template:
    metadata:
      labels:
        app: webappv1
    spec:
      containers:
        - name: webappv1-container
          image: optimusdame/proekt_kiii-app:1.0
          ports:
            - containerPort: 8080
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: proekt_kiii-appv2-statefulset
  namespace: proekt_kiii
spec:
  selector:
    matchLabels:
      app: webappv2
  serviceName: proekt_kiii-appv2-svc
  replicas: 3
  template:
    metadata:
      labels:
        app: webappv2
    spec:
      containers:
        - name: webappv2-container
          image: optimusdame/proekt_kiii-app:2.0
          ports:
            - containerPort: 8080
